# GC-tidal

./: .gitignore  PUBLISHING.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
configs/: MWPotential2014.ini
data/: .gitkeep
notebooks/current/: pal5_stream_simulation.ipynb
notebooks/experiments/: add_king_w0.ipynb
scripts/: basic.py  create_stream_pal5.py  gc_example.py  run_full_nbody.py  run_nbody_pal5.py
src/gc_tidal/: __init__.py
src/pyfalconstream/: __init__.py  cli.py  friction.py
src/pyfalconstream/io/: __init__.py
src/streamcutter/: __init__.py  cli.py  gc.py  host.py  king.py  nbody.py  stream_generator.py  tides.py
src/streamcutter/io/: __init__.py  snapshots.py
tests/: test_gc.py  test_nbody.py
